# Cmake_Find_X_Static

./: CMakeLists.txt  LICENSE  README.md
Modules/: .FindGRPC.cmake.swp  FindGFlags.cmake  FindGlog.cmake  FindLibEvent.cmake
